--- a/src/components/root/root.html
+++ b/src/components/root/root.html
@@ -1,5 +1,5 @@
 <navigation></navigation>
 <side-navigation></side-navigation>
-<div class="container">
+<div class="wide-container">
     <router-outlet></router-outlet>
 </div>
