--- a/src/components/sideNavigation/sideNavigation.html
+++ b/src/components/sideNavigation/sideNavigation.html
@@ -1,9 +1,8 @@
 <ul id="slide-out" class="side-nav">
     <li><a href="#!"><i class="material-icons">cloud</i>Menu</a></li>
 
-    <li><a routerLink="/customers">Customers</a></li>
+    <li><a routerLink="/customers">{{'menu.customers' | translate }}</a></li>
     <li>
         <div class="divider"></div>
     </li>
-    <li><a class="waves-effect" routerLink="/faqs">FAQs</a></li>
 </ul>
