--- a/src/components/customer/details.html
+++ b/src/components/customer/details.html
@@ -1,38 +1,50 @@
+<div class="row">
+    <div class="col s10 offset-s1">
+        <h5 *ngIf="customer?.value?.name"translate [translateParams]="{name: customer?.value?.name}">customerDetails.headers.update</h5>
+        <h5 *ngIf="!customer?.value?.name"[translate]>customerDetails.headers.new</h5>
+
+    </div>
+</div>
+<div class="row">
+    <div class="col s10 offset-s1">
+
 <form novalidate (ngSubmit)="saveCustomer(customer.value)" [formGroup]="customer">
     <input type="hidden" formControlName="id"/>
     <div class="row">
         <div class="input-field col s12">
-            <input placeholder="Placeholder" type="text" formControlName="name" id="name">
-            <label for="name">Name</label>
+            <input placeholder="{{'customerDetails.fields.name.placeholder' | translate}}" type="text" formControlName="name" id="name">
+            <label for="name">{{'customerDetails.fields.name.caption' | translate }}</label>
         </div>
     </div>
     <div class="row">
         <div class="input-field col s6">
-            <input placeholder="Germany" type="text" formControlName="country" id="country">
-            <label for="country">Country</label>
+            <input placeholder="{{'customerDetails.fields.country.placeholder' | translate}}" type="text" formControlName="country" id="country">
+            <label for="country">{{'customerDetails.fields.country.caption' | translate }}</label>
         </div>
         <div class="input-field col s6">
-            <input placeholder="DE" type="text" formControlName="countryCode" id="country_code">
-            <label for="country_code">Country Code</label>
+            <input placeholder="{{'customerDetails.fields.countryCode.placeholder' | translate}}" type="text" formControlName="countryCode" id="country_code">
+            <label for="country_code">{{'customerDetails.fields.countryCode.caption' | translate }}</label>
         </div>
     </div>
     <div class="row">
         <div class="input-field col s6">
-            <input placeholder="Berlin" type="text" formControlName="city" id="city">
-            <label for="city">City</label>
+            <input placeholder="{{'customerDetails.fields.city.placeholder' | translate}}" type="text" formControlName="city" id="city">
+            <label for="city">{{'customerDetails.fields.city.caption' | translate }}</label>
         </div>
 
         <div class="input-field col s6">
-            <input placeholder="+49 1234 56789" type="text" formControlName="phone" id="phone">
-            <label for="phone">Phone</label>
+            <input placeholder="{{'customerDetails.fields.phone.placeholder' | translate}}" type="text" formControlName="phone" id="phone">
+            <label for="phone">{{'customerDetails.fields.phone.caption' | translate }}</label>
         </div>
     </div>
     <div class="row">
-        <div class="col s4 offset-s8 right-align">
-            <button class="waves-effect waves-light btn blue lighten-2" type="submit" [class.disabled]="customer.invalid">Save</button>
-            <button class="waves-effect waves-orange btn white grey-text" (click)="navigateBack()">Cancel</button>
-            <button *ngIf="customer.value.id" class="waves-effect waves-red red btn" type="button" (click)="deleteCustomer(customer.value.id)">Delete</button>
+        <div class="col s5 offset-s7 right-align">
+            <button class="waves-effect waves-light btn blue lighten-2" type="submit" [class.disabled]="customer.invalid">{{'buttons.save' | translate}}</button>
+            <button class="waves-effect waves-orange btn white grey-text" (click)="navigateBack()">{{'buttons.cancel' | translate}}</button>
+            <button *ngIf="customer.value.id" class="waves-effect waves-red orange btn" type="button" (click)="deleteCustomer(customer.value.id)">{{'buttons.delete' | translate}}</button>
         </div>
     </div>
 
 </form>
+    </div>
+</div>
