--- a/src/components/customer/list.html
+++ b/src/components/customer/list.html
@@ -1,4 +1,8 @@
-<h4>Customer List</h4>
+<div class="row">
+    <div class="col s10 offset-s1">
+        <h5>Customer List</h5>
+    </div>
+</div>
 <div class="row">
     <div class="col s10 offset-s1">
         <table class="highlight responsive-table">
