--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -1,14 +1,9 @@
-<ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">German</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">English</a></li>
-</ul>
+<language-picker></language-picker>
 <nav class="blue lighten-2">
     <div class="nav-wrapper">
-        <a id="menu-toggle" class="brand-logo" href="#" data-activates="slide-out"><i class="material-icons">menu</i>Helpdesk</a>
+        <a id="menu-toggle" class="brand-logo" href="#" data-activates="slide-out"><i class="material-icons">menu</i>CRM</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">language</i></a></li>
-            <li><a href="badges.html"><i class="material-icons">account_circle</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-activates="dropdown-languages"><i class="material-icons">language</i></a></li>
         </ul>
     </div>
 </nav>
